--- a/app.json
+++ b/app.json
@@ -22,6 +22,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "expo-camera":
+        {
+          "cameraPermission": "Allow KAFKA to access your camera",
+          "microphonePermission": "Allow KAFKA to access your microphone",
+          "recordAudioAndroid": true
+        }
   }
 }
