--- a/app.json
+++ b/app.json
@@ -23,6 +23,10 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
+    "expo-barcode-scanner":
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access camera."
+        },
     "expo-camera":
         {
           "cameraPermission": "Allow KAFKA to access your camera",
